--- a/_posts/2014-08-15-atdd.md
+++ b/_posts/2014-08-15-atdd.md
@@ -2,7 +2,7 @@
 layout: post
 title: Ausführbare Spezifikationen
 description: "Language Workbenches eignen sich gut für ATDD und Ausführbare Spezifikationen."
-tags: [ATDD]
+tags: [ATDD, Ausführbare Spezifikationen, Language Workbench, MPS]
 ---
 
 Wozu automatische Akzeptanztests?
