--- a/_posts/2015-10-05-mps-gol.md
+++ b/_posts/2015-10-05-mps-gol.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: Game of Life in Java on Steroids
-description: "Game of Life in Java on Steroids"
-tags: [MPS, Java]
+title: Beginning Unit Tests in a brownfield project
+description: "Beginning Unit Tests in a brownfield project"
+tags: [en, jQAssistant, PlantUML, JaCoCo]
 ---
 
-debug
+
+## Motivation
