Revert "debugging unknown build error"
This reverts commit 661aa16fda5a28bd6334f484ad7b283bf53bcbec.

--- a/_posts/2015-10-05-mps-gol.md
+++ b/_posts/2015-10-05-mps-gol.md
@@ -1,9 +1,8 @@
 ---
 layout: post
-title: Beginning Unit Tests in a brownfield project
-description: "Beginning Unit Tests in a brownfield project"
-tags: [en, jQAssistant, PlantUML, JaCoCo]
+title: Game of Life in Java on Steroids
+description: "Game of Life in Java on Steroids"
+tags: [MPS, Java]
 ---
 
-
-## Motivation
+debug
