Revert "debugging unknown build error"
This reverts commit f369f353ecd5f7b49dbf6cac7ce8ccc889394015.

--- a/_posts/2015-10-05-mps-gol.md
+++ b/_posts/2015-10-05-mps-gol.md
@@ -113,3 +113,59 @@ The bold plus sign indicates that it is no normal summation operation but an ada
 side of the plus - here a variable named 'cell' of type Coordinate - is added to every entry in the table. This results
 into nine new Coordinates. The middle one is the original cell itself, so it is no neighbor and will be subtracted again.
 
+## Extending Operations: plus and minus
+Subtracted? A single value via minus operation from a collection in Java? This is only possible because we can also
+put additional semantics on operations as language extensions. Once again the type system feature of MPS
+comes to help and let's us overload operations:
+
+![Overloaded Operations](/images/gol/OverloadedOperations.png)
+
+The first of the two new rules declares for plus and minus operators that the summation and subtraction of two things
+of type Coordinate is allowed and results into a Coordinate type.
+
+The second new rule declares that a subtraction of a Coordinate from a Coordinate array is allowed and results into a 
+Coordinate array. 
+
+So far it's very nice that we can *program* with the extensions. But until now that program does not *run*.
+
+## Generate Java code
+To let a program run, it has to be compiled or interpreted. Java programs were compiled into byte code. Until now
+we did not define how the bytecode for our new language concepts has to be generated. But do we really want to 
+generate bytecode directly like Java does for the built-in keywords?
+
+Let's take a step back first and see what we did: we stacked a new language on top of an existing one. We created a new layer.
+Our new language extends the Java language. We should not bypass layers on the language stack and generate code for
+the language layer direct below the new language. Not that we are not constrained to extend only one language. A new one
+can extend as many languages as it wants. That's why I chose the term 'language layer'. 
+
+That said, we don't generate bytecode, instead we generate Java code. For 'alive' and 'dead' it's dead simple: 'alive' is
+replaced by a boolean 'true' and 'dead' by a boolean 'false'.
+
+Not really surprising is what we generate for the Coordinate type. In Java we would represent it by a class named Coordinate
+and so we generate it. To make that work, we have the Runtime Solution named 'gol.runtime'. It contains only one class -
+the Coordinate. Exactly that Coordinate class is used as the generation target for the Coordinate type. 
+
+So if the Coordinate type is translated to the Coordinate class, the Coordinate literals is translated to a constructor call
+of the Coordinate class. Quite natural.
+
+The nice thing about having the Coordinate class in the runtime model is that we can use it's 'sum', 'minus' and 'removeFromArray' 
+methods as generation targets for our overloaded operations 'plus' and 'minus'. It is exact the same thing as the 'add' and 'subtract'
+methods in BigInteger and BigDecimal.
+
+Now we are nearly done. But the hardest part comes as last. Translating the decision and mapping tables to valid Java code is not
+that simple. Therefor I would suggest to watch [that video](https://www.youtube.com/watch?v=RpQ5JVQaJx4) for a good and extensive
+explanation.
+
+
+## Conclusions
+What did we learn? It's quite simple to extend Java. Why should we do this? Nearly every Java programmer has some favorite missing
+language features, don't you?
+
+But there is a second and for me the more important reason: domain concepts can be integrated into a Java dialect which is 
+specially created for the project in that domain. For the Game of Life, we added 'alive', 'dead', the Coordinate. This may 
+be seen only as some syntactic sugar. But look again at the program: the color- and meaningful 'alive' and 'dead' words catch the eye.
+There is no syntactic clutter around creating a new Coordinate - no verbose Java 'new Coordinate(1, 1), just a (1, 1). Image you
+can write a math formula just as - a math formula and not as a long Java methods with many words an no single math symbol.
+Notation matters, and notation is nothing else than the concrete syntax of a language. With language extensions we can define our
+own concrete syntax. A program can be much more optimized for reading. And source code is ten times more read than written. 
+Or even more often.
