put author into page

--- a/_posts/2015-10-05-mps-gol.md
+++ b/_posts/2015-10-05-mps-gol.md
@@ -2,6 +2,7 @@
 layout: post
 title: Game of Life in Java on Steroids
 description: "Game of Life in Java on Steroids"
+author: jens_nerche
 tags: [Game of Life, MPS, Java, Language Workbench, Software Craftsmanship]
 ---
 
