put author into overview

--- a/_posts/2014-08-15-atdd.md
+++ b/_posts/2014-08-15-atdd.md
@@ -2,6 +2,7 @@
 layout: post
 title: Ausführbare Spezifikationen
 description: "Language Workbenches eignen sich gut für ATDD und Ausführbare Spezifikationen."
+author: jens_nerche
 tags: [ATDD, Ausführbare Spezifikationen, Language Workbench, MPS]
 ---
 
